fix: spacing of card-text

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .card-text {
-  padding: 16px 32px 40px;
+  padding: 16px 16px 40px;
   text-align: center;
 }
 
